--- a/app/partials/guest/guest.html
+++ b/app/partials/guest/guest.html
@@ -1,6 +1,6 @@
 <div id="jumbotron" class="row">
     <div class="jumbotron col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
-        <h1>Welcome to Software University's Social Network</h1>
+        <h1>Issue Tracking System</h1>
         <p>Please register/login to use our services.</p>
     </div>
 </div>
