--- a/app/partials/guest/header.html
+++ b/app/partials/guest/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">SoftUni Social Network</a>
+            <a class="navbar-brand" href="#/">Issue Tracking System</a>
         </div>
 
         <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
