--- a/app/components/users/edit-profile.html
+++ b/app/components/users/edit-profile.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3" ng-controller="userController">
+    <div class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3" ng-controller="usersController">
         <form name="editProfileForm" class="form-horizontal" autocomplete="off">
             <fieldset>
                 <div class="row">
