--- a/app/components/users/edit-profile.html
+++ b/app/components/users/edit-profile.html
@@ -1,4 +1,4 @@
-<header ng-include="'partials/user/header.html'"></header>
+<header ng-include="'shared/header/userHeaderView.html'"></header>
 
 <div class="panel panel-default">
     <div class="panel-body">
