--- a/app/components/home/homeView.html
+++ b/app/components/home/homeView.html
@@ -1,8 +1,9 @@
-<div ng-controller="homeController">
-    <header ng-include="'app/shared/header/guestHeaderView.html'" ng-if="!isLogged"></header>
-    <header ng-include="'app/shared/header/userHeaderView.html'" ng-if="isLogged"></header>
 
-    <div ng-include="'app/shared/article/guestView.html'" ng-if="!isLogged"></div>
-    <div ng-include="'app/shared/article/dashboardUserView.html'" ng-if="isLogged || !isAdmin"></div>
-    <div ng-include="'app/shared/article/dashboardAdminView.html'" ng-if="isLogged || isAdmin"></div>
+<div ng-controller="homeController">
+    <header ng-include="'app/shared/header/guestHeaderView.html'" ng-if="!isAuthenticated"></header>
+    <header ng-include="'app/shared/header/userHeaderView.html'" ng-if="isAuthenticated"></header>
+
+    <div ng-include="'app/shared/article/guestView.html'" ng-if="!isAuthenticated"></div>
+    <div ng-include="'app/shared/article/dashboardUserView.html'" ng-if="isAuthenticated"></div>
+
 </div>
