--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,6 +5,11 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    background : url("images/background.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 footer {
     position: absolute;
@@ -12,7 +17,6 @@ footer {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
-    background-color: #f5f5f5;
     padding-top: 10px;
 }
 
@@ -26,8 +30,35 @@ body>div>div.row {
 }
 
 .row {
-    margin: 0;
+    margin-top: 20px;
 }
+
+.user-dashboard {
+    margin: 120px;
+    margin-top: 30px;
+    background-color: #f7f7f7;
+}
+
+.user-dashboard h1 {
+    margin-left: 10px;
+    margin-top: 60px;
+}
+
+.user-dashboard h3 {
+    margin-left: 10px;
+    margin-top: 30px;
+}
+
+button {
+    margin: 10px;
+    float: left;
+}
+
+.grid {
+    width: 800px;
+    height: 250px;
+}
+
 
 .navbar img {
     width: 30px;
