--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -31,11 +31,13 @@ body>div>div.row {
 
 .row {
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .user-dashboard {
     margin: 120px;
     margin-top: 30px;
+    margin-bottom: 30px;
     background-color: #f7f7f7;
 }
 
@@ -56,7 +58,7 @@ button {
 
 .grid {
     width: 800px;
-    height: 250px;
+    height: 350px;
 }
 
 
