--- a/app/components/home/homeView.html
+++ b/app/components/home/homeView.html
@@ -3,7 +3,7 @@
     <header ng-include="'app/shared/header/guestHeaderView.html'" ng-if="!isAuthenticated"></header>
     <header ng-include="'app/shared/header/userHeaderView.html'" ng-if="isAuthenticated"></header>
 
-    <div ng-include="'app/shared/article/guestView.html'" ng-if="!isAuthenticated"></div>
-    <div ng-include="'app/shared/article/dashboardUserView.html'" ng-if="isAuthenticated"></div>
+    <div ng-include="'app/shared/article/guestView.html'" ng-if="!userLogged"></div>
+    <div ng-include="'app/shared/article/dashboardUserView.html'" ng-if="userLogged"></div>
 
 </div>
