--- a/app/components/home/homeView.html
+++ b/app/components/home/homeView.html
@@ -1,7 +1,7 @@
 
-<div ng-controller="homeController">
-    <header ng-include="'app/shared/header/guestHeaderView.html'" ng-if="!isAuthenticated"></header>
-    <header ng-include="'app/shared/header/userHeaderView.html'" ng-if="isAuthenticated"></header>
+<div>
+    <header ng-include="'app/shared/header/guestHeaderView.html'" ng-if="!userLogged"></header>
+    <header ng-include="'app/shared/header/userHeaderView.html'" ng-if="userLogged"></header>
 
     <div ng-include="'app/shared/article/guestView.html'" ng-if="!userLogged"></div>
     <div ng-include="'app/shared/article/dashboardUserView.html'" ng-if="userLogged"></div>
