--- a/app/components/users/templates/logout.html
+++ b/app/components/users/templates/logout.html
@@ -1,3 +1,3 @@
-<header ng-include="'partials/user/header.html'"></header>
+<header ng-include="'app/shared/header/userHeaderView.html'"></header>
 
 <toaster-container toaster-options="{'time-out': 1500, 'animation-class': 'toast-center'}"></toaster-container>
