--- a/app/components/issues/templates/addIssue.html
+++ b/app/components/issues/templates/addIssue.html
@@ -1,25 +1,27 @@
 <div>
     <div class="user-dashboard">
-        <h3> Edit Issue</h3>
-        <fieldset class="col-md-6">
+        <h3>Add Issue</h3>
+        <form name="add-issue-form" class="add-form">
             <div class="form-group">
                 <label for="issueTitle">Title</label>
                 <input type="text" class="form-control" id="issueTitle" ng-model="issue.Title" placeholder="Issue Title">
             </div>
             <div class="form-group">
                 <label for="issueAssignee">Assignee</label>
-                <select id="issueAssignee" ng-model="issue.Assignee.Id" class="form-control">
+                <select id="issueAssignee" ng-model="issue.AssigneeId" class="form-control">
                     <option ng-repeat="user in users" value="{{user.Id}}" >{{user.Username}}</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="issueProject">Project</label>
-                <select ng-disabled="!isAdmin" id="issueProject" ng-model="issue.Project.Id" class="form-control" ng-options="project.Id as project.Name for project in projects">
+                <select id="issueProject" ng-change="attachProjectPriorities(issue.ProjectId)" ng-model="issue.ProjectId" class="form-control">
+                    <option ng-repeat="project in projects" value="{{project.Id}}" >{{project.Name}}</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="issuePriority">Priority</label>
-                <select ng-model="issue.Priority.Id" id="issuePriority" class="form-control" ng-options="priority.Id as priority.Name for priority in issue.Priorities">
+                <select ng-model="issue.PriorityId" id="issuePriority" class="form-control">
+                    <option ng-repeat="priority in issue.Priorities" value="{{priority.Id}}">{{priority.Name}}</option>
                 </select>
             </div>
             <div class="form-group">
@@ -31,22 +33,11 @@
                 <textarea id="issueDescription" class="form-control" placeholder="Description" ng-model="issue.Description"></textarea>
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Labels (comma separated)</label>
-                <input type="text" class="form-control" ng-model="issue.Labels" id="exampleInputPassword1" placeholder="Labels">
+                <label for="issueLabels">Labels (comma separated)</label>
+                <input type="text" class="form-control" ng-model="issue.Labels" id="issueLabels" placeholder="Soft, Uni">
                 <br>
             </div>
-            <button type="submit" class="btn btn-success" ng-click="editIssue(issue)">Edit Issue</button>
-        </fieldset>
-
-        <div class="item col-md-6 panel">
-            <h3>Available statuses:</h3>
-            <div ng-repeat="status in issue.AvailableStatuses">
-                <span class="col-md-4">-----{{status.Name}}</span>
-                <button ng-click="changeIssueStatus(issue.Id, status.Id)" class="btn btn-md btn-primary">Change</button>
-
-            </div>
-        </div>
-
-
+            <button type="submit" class="btn btn-success" ng-click="addIssue(issue)">Add Issue</button>
+        </form>
     </div>
 </div>
