--- a/app/components/projects/templates/allProjects.html
+++ b/app/components/projects/templates/allProjects.html
@@ -9,7 +9,7 @@
                     <a class="btn btn-sm btn-success" href="#/projects/{{project.Id}}">view</a>
                 </p>
             </div>
-        <a class="btn btn-md btn-success" href="#/projects/add">Add Project</a>
+        <a class="btn btn-md btn-success" href="#/projects/add" ng-if="isAdmin">Add Project</a>
     </div>
 </div>
 
