--- a/app/components/projects/templates/editProject.html
+++ b/app/components/projects/templates/editProject.html
@@ -10,12 +10,12 @@
             <div class="form-group">
                 <label for="projectLeader">Leader</label>
                 <select ng-model="project.Lead.Id" ng-disabled="!isAdmin" id="projectLeader" class="form-control">
-                    <option value="{{user.Id}}" ng-repeat="user in users">{{user.Username}}</option>
+                    <option ng-repeat="option in data.availableOptions" value="{{option.id}}">{{option.name}}</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="projectKey">Project Key</label>
-                <input id="projectKey" ng-model="project.ProjectKey" type="text" class="form-control" id="exampleInputEmail1" placeholder="Project Key" ng-disabled="true" value="123qwe">
+                <input id="projectKey" ng-model="project.ProjectKey" type="text" class="form-control" id="projectKey" placeholder="Project Key" ng-disabled="true" value="">
             </div>
             <div class="form-group">
                 <label for="projectPriorities">Priorities (comma separated)</label>
