--- a/app/components/home/home-templates/user-dashboard.html
+++ b/app/components/home/home-templates/user-dashboard.html
@@ -3,25 +3,13 @@
     <a class="btn btn-md btn-success" href="#/projects">Projects</a>
     <br>
     <h1>Dashboard</h1>
+
     <div class="row">
         <div class="col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
             <h3>Affiliated Projects</h3>
-            <a href="#/projects/{{project.Id}}" class="row" ng-repeat="project in projects">{{project.Name}}</a>
+            <a href="#/projects/{{project.Id}}" class="row" ng-repeat="project in userProjects">{{project.Name}}</a>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 col-md-offset-1">
-            <label for="pageSize">Issues per page</label>
-            <select ng-change="attachUserAssignedIssues(pageSize, page, pageOrder)" ng-model="pageSize" id="pageSize">
-                <option ng-selected="true" value="3">3</option>
-                <option value="5">5</option>
-                <option value="10">10</option>
-            </select>
-            <label for="pageOrder">Issue order</label>
-            <select ng-change="attachUserAssignedIssues(pageSize, page, pageOrder)" ng-model="pageOrder" id="pageOrder">
-                <option value="Id">Id &#x2191</option>
-                <option value="Id desc">Id &#x2193</option>
-                <option value="DueDate">Due Date &#x2191</option>
-                <option ng-selected="true" value="DueDate desc">Due Date &#x2193</option>
-            </select>
             <table class="table table-striped">
                 <thead>
                 <tr>
@@ -40,10 +28,10 @@
                 </tr>
                 </tbody>
             </table>
-            <ul ng-if="issuePages>1" class="pagination">
-                <li ng-repeat="page in issuePages | range" ><a ng-click="attachUserAssignedIssues(pageSize, page, pageOrder)" href="#/">{{page}}</a></li>
-            </ul>
+            <uib-pagination boundary-links="true" total-items="totalIssues" ng-model="currentPage" class="pagination-sm" ng-change="attachUserAssignedIssues()" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
+            </uib-pagination>
         </div>
     </div>
+
 </div>
 
