--- a/app/components/home/home-templates/guest.html
+++ b/app/components/home/home-templates/guest.html
@@ -17,18 +17,18 @@
                 <div class="form-group">
                     <label for="loginUsername" class="col-md-3 control-label">Email</label>
                     <div class="col-md-9">
-                        <input type="text" required="required" class="form-control" id="loginUsername" ng-model="loginUser.username" placeholder="Email">
+                        <input type="text" required="required" class="form-control" id="loginUsername" ng-model="user.email" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="loginPassword" class="col-md-3 control-label">Password</label>
                     <div class="col-md-9">
-                        <input type="password" required="required" class="form-control" id="loginPassword" ng-model="loginUser.password" placeholder="Password">
+                        <input type="password" required="required" class="form-control" id="loginPassword" ng-model="user.password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-9 col-md-offset-3">
-                        <button type="submit" class="btn btn-primary" ng-disabled="loginForm.$invalid" ng-click="login(loginUser)">Login</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled="loginForm.$invalid" ng-click="login(user)">Login</button>
                     </div>
                 </div>
             </fieldset>
