--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -56,7 +56,9 @@ body>div>div.row {
 }
 
 .user-dashboard h3 {
-    margin-top: 20px;
+    color: grey;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
 .item p {
@@ -66,12 +68,22 @@ body>div>div.row {
 
 .add-form {
     padding: 100px;
+    padding-top: 20px;
+}
+
+.edit-form {
+    padding: 100px;
+    padding-top: 20px;
 }
 
 button {
     margin-top: 20px;
     margin-left: 20px;
     float: left;
+}
+
+.item-atr {
+    font-weight:bold;
 }
 
 .comments-box {
