--- a/app/components/projects/projects-templates/edit-project.html
+++ b/app/components/projects/projects-templates/edit-project.html
@@ -10,8 +10,9 @@
             <div class="form-group">
                 <label for="projectLeader">Leader</label>
                 <select ng-model="project.Lead.Id"  id="projectLeader" class="form-control"
-                ng-options="user as user.Username for user in users track by user.Id">
-
+                        ng-options="user as user.Username for user in users track by user.Id"
+                        ng-disabled="!isAdmin">
+                    <option value="">-- Select Leader --</option>
                 </select>
             </div>
             <div class="form-group">
@@ -20,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label for="projectPriorities">Priorities (comma separated)</label>
-                <input type="text" ng-model="project.Priorities" class="form-control" id="projectPriorities" placeholder="Available Priorities For The Issues" value="Low, Medium, Urgent">
+                <input type="text" ng-model="project.Priorities" class="form-control" id="projectPriorities" placeholder="Available Priorities" value="Low, Medium, Urgent">
             </div>
             <div class="form-group">
                 <label for="projectLabels">Labels (comma separated)</label>
