--- a/app/components/users/users-templates/change-user-password.html
+++ b/app/components/users/users-templates/change-user-password.html
@@ -25,8 +25,8 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-9 col-lg-offset-3">
-                                <button type="reset" class="btn btn-default">Cancel</button>
-                                <button type="submit" class="btn btn-primary" ng-click="changePassword(password, changePasswordForm)">Change password</button>
+                                <button type="reset" class="btn btn-default common">Cancel</button>
+                                <button type="submit" class="btn btn-success common" ng-click="changePassword(password, changePasswordForm)">Change password</button>
                             </div>
                         </div>
                     </fieldset>
