--- a/app/components/projects/projects-templates/project.html
+++ b/app/components/projects/projects-templates/project.html
@@ -1,4 +1,7 @@
 <div class="user-dashboard">
+    <a class="btn btn-md btn-success common" href="#/">Dashboard</a>
+    <a class="btn btn-md btn-success common" href="#/projects" ng-if="isAdmin">Projects</a>
+    <br>
     <h3>Project page</h3>
     <br />
         <div class="row">
