--- a/app/components/home/home-templates/user-dashboard.html
+++ b/app/components/home/home-templates/user-dashboard.html
@@ -1,9 +1,8 @@
-<div class="user-dashboard">
-    <a class="btn btn-md btn-success" href="#/" ng-if="isAdmin">Dashboard</a>
-    <a class="btn btn-md btn-success" href="#/projects" ng-if="isAdmin">Projects</a>
+<div class="user-dashboard" ng-controller="HomeController">
+    <a class="btn btn-md btn-success common" href="#/projects/add" ng-if="isAdmin">Add Project</a>
+    <a class="btn btn-md btn-success common" href="#/projects" ng-if="isAdmin">Projects</a>
     <br>
     <h1>Dashboard</h1>
-
     <div class="row">
         <div class="col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
             <h3>Affiliated Projects</h3>
