--- a/app/components/projects/projects-templates/add-issue-to-project.html
+++ b/app/components/projects/projects-templates/add-issue-to-project.html
@@ -1,5 +1,5 @@
  <div class="user-dashboard">
-     <a class="btn btn-md btn-success common" href="#/projects/project.Id">Go Back To Project</a>
+     <a class="btn btn-md btn-success common" href="#/projects/{{currentProject.Id}}">Go Back To Project</a>
      <a class="btn btn-md btn-success common" href="#/">Dashboard</a>
      <a class="btn btn-md btn-success common" href="#/projects" ng-if="isAdmin">Projects</a>
      <br>
