--- a/app/components/issues/issues-templates/issue.html
+++ b/app/components/issues/issues-templates/issue.html
@@ -1,4 +1,5 @@
 <div class="user-dashboard">
+    <a class="btn btn-md btn-success common" href="#/projects/{{projectId}}">Go Back To Project</a>
     <a class="btn btn-md btn-success common" href="#/">Dashboard</a>
     <a class="btn btn-md btn-success common" href="#/projects" ng-if="isAdmin">Projects</a>
     <br>
