--- a/app/components/projects/projects-templates/edit-project.html
+++ b/app/components/projects/projects-templates/edit-project.html
@@ -4,7 +4,7 @@
     <br>
     <h3> Edit Project</h3>
     <div>
-        <form name="edit-project-form" class="edit-form"">
+        <form name="edit-project-form" class="edit-form">
             <h2>{{project.Name}}</h2>
             <div class="form-group">
                 <label for="projectName">Name</label>
