--- a/app/components/users/users-templates/logout.html
+++ b/app/components/users/users-templates/logout.html
@@ -1,1 +1,3 @@
-<toaster-container toaster-options="{'time-out': 1500, 'animation-class': 'toast-center'}"></toaster-container>
+<div>
+    <div ng-include="'app/components/home/home-templates/guest.html'"></div>
+</div>
